--- a/styles/app.css
+++ b/styles/app.css
@@ -22,7 +22,13 @@ h1 {
   font-family: 'Yanone Kaffeesatz';
   font-size: 600%;
   text-align: center;
-  padding: 10px 0 30px 0;
+  padding: 10px 0 10px 0;
+}
+
+h1.subtitle {
+  margin-top: 0;
+  padding-top: 0;
+  font-size: 350%;
 }
 
 h2 {
